[gd_scene load_steps=12 format=4 uid="uid://b8wmb4wcsiv8c"]

[ext_resource type="PackedScene" uid="uid://ce6rkivqsallb" path="res://entities/player/player.tscn" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://cbugkqwtu3e06" path="res://world.gd" id="1_tlwt5"]
[ext_resource type="PackedScene" uid="uid://dfwajry7h2q7l" path="res://ui/health_bar.tscn" id="2_aqk2v"]
[ext_resource type="PackedScene" uid="uid://bmwbsh74n6hno" path="res://entities/enemy/enemy.tscn" id="2_fj7yv"]
[ext_resource type="TileSet" uid="uid://c688padpwf0wo" path="res://terrain/tileset.tres" id="3_dwbse"]
[ext_resource type="PackedScene" path="res://ui/game_timer.tscn" id="3_game_timer"]
[ext_resource type="Script" uid="uid://d2g2ibloasrhx" path="res://entities/enemy_spawner.gd" id="3_spawner_script"]
[ext_resource type="PackedScene" path="res://ui/level_bar.tscn" id="4_level_bar"]
[ext_resource type="PackedScene" path="res://ui/attack_timer.tscn" id="5_attack_timer"]
[ext_resource type="PackedScene" path="res://ui/next_wave_button.tscn" id="6_next_wave_button"]
[ext_resource type="PackedScene" path="res://ui/shop_menu.tscn" id="7_shop_menu"]

[node name="World" type="Node2D"]
script = ExtResource("1_tlwt5")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="UI" node_paths=PackedStringArray("player") instance=ExtResource("2_aqk2v")]
unique_name_in_owner = true
offset_left = 100.0
offset_top = 100.0
offset_right = 500.0
offset_bottom = 160.0
player = NodePath("../../Player")

[node name="GameTimer" parent="UI" instance=ExtResource("3_game_timer")]
unique_name_in_owner = true
anchors_preset = 5
offset_top = 40.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="LevelBar" parent="UI" instance=ExtResource("4_level_bar")]
unique_name_in_owner = true

[node name="AttackTimer" parent="UI" instance=ExtResource("5_attack_timer")]
unique_name_in_owner = true
grow_horizontal = 0
grow_vertical = 0

[node name="NextWaveButton" parent="UI" instance=ExtResource("6_next_wave_button")]
unique_name_in_owner = true
visible = false
grow_vertical = 0

[node name="ShopMenu" parent="UI" instance=ExtResource("7_shop_menu")]
unique_name_in_owner = true
grow_horizontal = 2
grow_vertical = 2

[node name="MoneyLabel" type="Label" parent="UI"]
unique_name_in_owner = true
offset_left = 100.0
offset_top = 168.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 28
text = "Money: 0"

[node name="Background" type="Polygon2D" parent="."]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-2280, -1800, 4840, -1800, 4840, 3400, -2280, 3400)

[node name="PlayArea" type="Polygon2D" parent="."]
color = Color(0.462745, 0.396078, 0.341176, 1)
polygon = PackedVector2Array(-1280, -800, 3840, -800, 3840, 2400, -1280, 2400)

[node name="TileMaps" type="Node2D" parent="."]
scale = Vector2(3, 3)

[node name="Details" type="TileMapLayer" parent="TileMaps"]
tile_map_data = PackedByteArray("AADm/wcAAAABAA0AAADn//7/AAACAA0AAADo/zEAAAAEAA0AAADq/xkAAAAFAA0AAADq/zAAAAAFAA0AAADs/wYAAAAEAA0AAADs/wcAAAAAAA0AAADs/ycAAAAFAA0AAADt/zAAAAACAA0AAADu//j/AAACAA0AAADu/ygAAAAAAA0AAADv/wAAAAAFAA0AAADx//H/AAAEAA0AAADy//z/AAAAAA0AAADy/w0AAAACAA0AAADz/xkAAAAFAA0AAAD0////AAAAAA0AAAD1//7/AAACAA0AAAD2/ywAAAAEAA0AAAD3//v/AAAEAA0AAAD3/woAAAAAAA0AAAD3/xkAAAAFAA0AAAD4/xYAAAAEAA0AAAD5////AAAEAA0AAAD6//L/AAACAA0AAAD6/xgAAAAEAA0AAAD8//X/AAAAAA0AAAD8//f/AAAAAA0AAAD9/xAAAAADAA0AAAD+/w8AAAABAA0AAAD+/yIAAAABAA0AAAD//yEAAAAFAA0AAAD//ysAAAABAA0AAAD//y8AAAAAAA0AAAABAPf/AAABAA0AAAABAAsAAAACAA0AAAABACsAAAACAA0AAAACAP3/AAAFAA0AAAACAAUAAAAEAA0AAAACAA8AAAACAA0AAAADAPT/AAABAA0AAAADAPf/AAACAA0AAAADAAAAAAAEAA0AAAAEACIAAAABAA0AAAAHAPj/AAAEAA0AAAAHAAsAAAADAA0AAAAHACcAAAAEAA0AAAAJAB4AAAAFAA0AAAAKAPz/AAAFAA0AAAAKACUAAAADAA0AAAALAAgAAAAFAA0AAAAMAPn/AAAFAA0AAAAMADAAAAAFAA0AAAANADEAAAAFAA0AAAARAB8AAAAFAA0AAAAVABcAAAADAA0AAAAWAPD/AAAAAA0AAAAWAPf/AAACAA0AAAAWAAoAAAAFAA0AAAAZAPj/AAAAAA0AAAAaAPb/AAAFAA0AAAAaABIAAAACAA0AAAAcAA8AAAACAA0AAAAeABoAAAACAA0AAAAeAC4AAAABAA0AAAAgAB8AAAAFAA0AAAAgACYAAAAAAA0AAAAgACsAAAAFAA0AAAAiAAUAAAAAAA0AAAAiAA0AAAAAAA0AAAAiACAAAAAFAA0AAAAkAC0AAAABAA0AAAAlAPz/AAADAA0AAAAlABcAAAACAA0AAAAmAP7/AAADAA0AAAAnAPj/AAAEAA0AAAAoAPn/AAACAA0AAAAoABYAAAAEAA0AAAApAPX/AAAFAA0AAAAqAB0AAAAEAA0AAAAqACwAAAACAA0AAAArACQAAAAEAA0AAAAsAAsAAAACAA0AAAAsAA8AAAAAAA0AAAAsABQAAAABAA0AAAAsAC0AAAAAAA0AAAAtAPL/AAAAAA0AAAAtABIAAAADAA0AAAAuAAcAAAACAA0AAAAwAPf/AAAAAA0AAAAyAPv/AAAFAA0AAAAyACMAAAACAA0AAAAzAAUAAAAAAA0AAAAzAB8AAAAEAA0AAAA1AAEAAAAEAA0AAAA1AAUAAAAFAA0AAAA1ACwAAAACAA0AAAA1AC0AAAABAA0AAAA3APD/AAAEAA0AAAA4AAwAAAADAA0AAAA4ABMAAAABAA0AAAA5ABcAAAAAAA0AAAA5ACgAAAADAA0AAAA5ACkAAAAEAA0AAAA6AAUAAAAAAA0AAAA6ACoAAAAFAA0AAAA8AC8AAAAEAA0AAAA+AC4AAAAEAA0AAAA/APr/AAACAA0AAABBAP//AAAFAA0AAABDAPf/AAAEAA0AAABDAP7/AAAEAA0AAABDACQAAAACAA0AAABGAAUAAAAAAA0AAABIAC4AAAAEAA0AAABJAB8AAAAEAA0AAABJACQAAAADAA0AAABKAAIAAAADAA0AAABMAPv/AAAFAA0AAABNABkAAAAEAA0AAABNAC8AAAAEAA0AAAA=")
tile_set = ExtResource("3_dwbse")

[node name="BoundaryWall" type="StaticBody2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BoundaryWall"]
polygon = PackedVector2Array(-1680, -1200, 4240, -1200, 4240, 2800, -1680, 2800, -1680, -800, -1280, -800, -1280, 2400, 3840, 2400, 3840, -800, -1680, -800)

[node name="Player" parent="." instance=ExtResource("1_f3sb7")]
unique_name_in_owner = true
position = Vector2(1243, 740)

[node name="EnemySpawner" type="Node2D" parent="." node_paths=PackedStringArray("player")]
unique_name_in_owner = true
script = ExtResource("3_spawner_script")
enemy_scene = ExtResource("2_fj7yv")
player = NodePath("../Player")
